fix: adjust customized label length, and show as tooltip when overflows (#712)

--- a/app/components/pipeline-graph-nav/styles.scss
+++ b/app/components/pipeline-graph-nav/styles.scss
@@ -21,6 +21,7 @@
     border-radius: 2px;
     padding: 5px 10px;
     font-weight: $weight-normal;
+    margin-left: 5px;
 
     &:hover,
     &.active:hover {
@@ -96,6 +97,10 @@
 
     a {
       line-height: inherit;
+    }
+
+    .customize-label {
+      word-break: break-all;
     }
   }
 }
